// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArgumentHeaderTab /> should render correctly 1`] = `
<ForwardRef
  direction="column"
  mb={4}
>
  <ForwardRef
    align="center"
    direction="row"
    justify="space-between"
    mb={4}
  >
    <InlineSelect
      onChange={[Function]}
      value="PUBLISHED"
    >
      <InlineSelect.Choice
        value="PUBLISHED"
      >
        filter.count.status.published-masculine
      </InlineSelect.Choice>
      <InlineSelect.Choice
        value="WAITING"
      >
        filter.count.status.awaiting
      </InlineSelect.Choice>
      <InlineSelect.Choice
        value="TRASHED"
      >
        filter.count.status.trashed
      </InlineSelect.Choice>
    </InlineSelect>
    <ForwardRef
      align="center"
      direction="row"
      spacing={5}
    >
      <Menu>
        <Menu.Button>
          <Button
            color="gray.500"
            rightIcon="ARROW_DOWN_O"
          >
            label_filters
          </Button>
        </Menu.Button>
        <Menu.List>
          <Menu.OptionGroup
            onChange={[Function]}
            title="filter-arguments"
            type="checkbox"
            value={
              Array [
                "FOR",
                "AGAINST",
              ]
            }
          >
            <Menu.OptionItem
              value="FOR"
            >
              <Text
                color="gray.900"
              >
                global.for
              </Text>
            </Menu.OptionItem>
            <Menu.OptionItem
              value="AGAINST"
            >
              <Text
                color="gray.900"
              >
                global.against
              </Text>
            </Menu.OptionItem>
          </Menu.OptionGroup>
        </Menu.List>
      </Menu>
      <Button
        aria-label="global.export"
        onClick={[Function]}
        variant="primary"
        variantColor="primary"
        variantSize="small"
      >
        global.export
      </Button>
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`<ArgumentHeaderTab /> should render correctly when no vote 1`] = `
<ForwardRef
  direction="column"
  mb={4}
>
  <ForwardRef
    align="center"
    direction="row"
    justify="space-between"
    mb={4}
  >
    <InlineSelect
      onChange={[Function]}
      value="PUBLISHED"
    >
      <InlineSelect.Choice
        value="PUBLISHED"
      >
        filter.count.status.published-masculine
      </InlineSelect.Choice>
      <InlineSelect.Choice
        value="WAITING"
      >
        filter.count.status.awaiting
      </InlineSelect.Choice>
      <InlineSelect.Choice
        value="TRASHED"
      >
        filter.count.status.trashed
      </InlineSelect.Choice>
    </InlineSelect>
    <ForwardRef
      align="center"
      direction="row"
      spacing={5}
    >
      <Menu>
        <Menu.Button>
          <Button
            color="gray.500"
            rightIcon="ARROW_DOWN_O"
          >
            label_filters
          </Button>
        </Menu.Button>
        <Menu.List>
          <Menu.OptionGroup
            onChange={[Function]}
            title="filter-arguments"
            type="checkbox"
            value={
              Array [
                "FOR",
                "AGAINST",
              ]
            }
          >
            <Menu.OptionItem
              value="FOR"
            >
              <Text
                color="gray.900"
              >
                global.for
              </Text>
            </Menu.OptionItem>
            <Menu.OptionItem
              value="AGAINST"
            >
              <Text
                color="gray.900"
              >
                global.against
              </Text>
            </Menu.OptionItem>
          </Menu.OptionGroup>
        </Menu.List>
      </Menu>
      <Button
        aria-label="global.export"
        onClick={[Function]}
        variant="primary"
        variantColor="primary"
        variantSize="small"
      >
        global.export
      </Button>
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`<ArgumentHeaderTab /> should render correctly with step closed 1`] = `
<ForwardRef
  direction="column"
  mb={4}
>
  <ForwardRef
    align="center"
    direction="row"
    justify="space-between"
    mb={4}
  >
    <InlineSelect
      onChange={[Function]}
      value="PUBLISHED"
    >
      <InlineSelect.Choice
        value="PUBLISHED"
      >
        filter.count.status.published-masculine
      </InlineSelect.Choice>
      <InlineSelect.Choice
        value="WAITING"
      >
        filter.count.status.non.published
      </InlineSelect.Choice>
      <InlineSelect.Choice
        value="TRASHED"
      >
        filter.count.status.trashed
      </InlineSelect.Choice>
    </InlineSelect>
    <ForwardRef
      align="center"
      direction="row"
      spacing={5}
    >
      <Menu>
        <Menu.Button>
          <Button
            color="gray.500"
            rightIcon="ARROW_DOWN_O"
          >
            label_filters
          </Button>
        </Menu.Button>
        <Menu.List>
          <Menu.OptionGroup
            onChange={[Function]}
            title="filter-arguments"
            type="checkbox"
            value={
              Array [
                "FOR",
                "AGAINST",
              ]
            }
          >
            <Menu.OptionItem
              value="FOR"
            >
              <Text
                color="gray.900"
              >
                global.for
              </Text>
            </Menu.OptionItem>
            <Menu.OptionItem
              value="AGAINST"
            >
              <Text
                color="gray.900"
              >
                global.against
              </Text>
            </Menu.OptionItem>
          </Menu.OptionGroup>
        </Menu.List>
      </Menu>
      <Button
        aria-label="global.export"
        onClick={[Function]}
        variant="primary"
        variantColor="primary"
        variantSize="small"
      >
        global.export
      </Button>
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;
